[gd_scene load_steps=3 format=3 uid="uid://bfajn2hhaj2bj"]

[ext_resource type="Script" path="res://source/editor/queue_input_dialogue.gd" id="1_7clfj"]
[ext_resource type="StyleBox" uid="uid://dlcd0siiwrr1b" path="res://assets/gui/theme/text_edit/text_edit_normal.tres" id="2_ob2d4"]

[node name="QueueInputDialogue" type="ConfirmationDialog"]
disable_3d = true
handle_input_locally = false
initial_position = 2
size = Vector2i(300, 90)
visible = true
unresizable = true
borderless = true
popup_window = true
ok_button_text = "Submit"
script = ExtResource("1_7clfj")

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 290.0
offset_bottom = 41.0
size_flags_vertical = 3
focus_mode = 1
theme_override_styles/normal = ExtResource("2_ob2d4")
theme_override_styles/focus = ExtResource("2_ob2d4")
theme_override_styles/read_only = ExtResource("2_ob2d4")
placeholder_text = "Enter queue..."
caret_blink = true

[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
